# Starling

./: .env.example  .gitignore  CHANGELOG.md  DOCS.txt  README.md  __version__.py  agent_memory.py  cli.py  config_loader.py  crew.py  crew_memory.py  cron_engine.py  daemon.py  heartbeat.py  model_wizard.py  preferences.py  pyproject.toml  semantic_router.py  setup_wizard.py  telegram_listener.py  telegram_notify.py  test_semantic_router.py  theme.py  tui.py
